Fixes (badly) wikize bug squeezing authorized?

--- a/app/views/backend/custom_fields/_form.html.haml
+++ b/app/views/backend/custom_fields/_form.html.haml
@@ -14,5 +14,4 @@
   =f.input :maximal_value
 
 =field_set(:choice_options) do
-  =f.nested_association :choices do
-    =f.input :name
+  =f.nested_association :choices
