--- a/app/views/backend/purchase_items/_form.html.haml
+++ b/app/views/backend/purchase_items/_form.html.haml
@@ -4,11 +4,7 @@
   =f.referenced_association :product#, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
   =f.input :quantity
   =f.input :annotation
-  =f.nested_association(:price) do
-    =f.referenced_association :category
-    =f.input :pretax_amount
-    =f.referenced_association :tax
-    =f.input :currency, :collection => currencies
+  =f.nested_association(:price)
 
 =field_set :stocks, :depend_on => :product, :if => :stockable? do
   =f.referenced_association :warehouse
