Fixes functional bugs

--- a/app/views/backend/equipments/_form.html.haml
+++ b/app/views/backend/equipments/_form.html.haml
@@ -19,7 +19,7 @@
 =field_set(:entity) do
   =f.referenced_association :owner
 
-=field_set(:stock) do
+-#=field_set(:stock) do
   =f.referenced_association :content_nature
   =f.referenced_association :content_unit
   =f.input :content_maximal_quantity
