--- a/app/views/backend/operations/show.html.haml
+++ b/app/views/backend/operations/show.html.haml
@@ -2,13 +2,13 @@
   -t.edit @operation
 
 =attributes_list(@operation) do |l|
-  -#l.attribute :name
+  -# l.attribute :name
   -l.attribute :nature
-  -#l.attribute :responsible, :label=>:label
-  -l.attribute :target, :label=>:name
-  -#l.attribute :planned_on
-  -#l.attribute :moved_on
-  -#l.attribute :tools_list
+  -# l.attribute :responsible, :label=>:label
+  -# l.attribute :target, :label=>:name
+  -# l.attribute :planned_on
+  -# l.attribute :moved_on
+  -# l.attribute :tools_list
 
 -# %h2=tc(:operation_items)
 -# =list(:items)
