--- a/app/views/backend/equipments/_form.html.haml
+++ b/app/views/backend/equipments/_form.html.haml
@@ -7,7 +7,7 @@
   =f.input :reservoir, :show => :stock
   =f.input :description, :field => :text # affiche le champ description
   =f.input :picture, :multiple => true
-  =image_tag(@equipment.picture.url(:thumb))
+  =image_tag(@equipment.picture.url(:thumb)) if @equipment.picture.file?
   =f.custom_fields
   -#for datum in @custom_field_data
     =custom_field datum.custom_field.name, {:datatype => datum.custom_field.nature.to_sym, :id => "custom_field_datum_#{datum.custom_field_id}_value", :name => "custom_field_datum[#{datum.custom_field_id}][value]", :value => datum.value, :size => datum.custom_field.length_max, :options => {:include_blank => (datum.custom_field.required ? nil : '')}, :choices => datum.custom_field.choices.collect{|x| [x.name , x.id]}  }
