Add CRUD on working_set and menu in production.

--- a/app/views/backend/working_sets/show.html.haml
+++ b/app/views/backend/working_sets/show.html.haml
@@ -3,5 +3,6 @@
 
 =beehive do |b|
   -b.cell do
-    =attribute_list do |l|
+    =attributes_list(@working_set) do |l|
       -l.attribute :name
+      -l.attribute :nomen
