--- a/app/views/backend/equipments/_form.html.haml
+++ b/app/views/backend/equipments/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do # partie info general de l entité animal
   =f.input :name # affiche le champ name de l entité animal avec une infos derriere
-  =f.referenced_association :nature # affiche un menu deroulant construit par la relation group_id vers le champ name de l entité animal_group
+  =f.referenced_association :nature ,:source => :equipments# affiche un menu deroulant construit par la relation group_id vers le champ name de l entité animal_group
   =f.referenced_association :variety
   =f.input :active, :hide => :dead_at
   =f.input :external, :show => :entity
