--- a/app/views/backend/outgoing_deliveries/_form.html.haml
+++ b/app/views/backend/outgoing_deliveries/_form.html.haml
@@ -1,5 +1,5 @@
 -# TODO Manage  extra content in forms
-=sales_steps(@outgoing_delivery.sale)
+=sale_steps(@outgoing_delivery.sale)
 
 =field_set do
   -# TODO: Manage filtered source with column
