--- a/app/views/backend/outgoing_deliveries/show.html.haml
+++ b/app/views/backend/outgoing_deliveries/show.html.haml
@@ -1,4 +1,4 @@
-=sales_steps(@outgoing_delivery.sale)
+=sale_steps(@outgoing_delivery.sale)
 
 =toolbar do |t|
   -t.edit @outgoing_delivery if @outgoing_delivery.updateable?
