--- a/app/views/backend/custom_fields/_choice_fields.html.haml
+++ b/app/views/backend/custom_fields/_choice_fields.html.haml
@@ -1,5 +1,5 @@
 -# Generated automatically. Don't edit this file.
 -custom_field_choice ||= f.object
 .nested-fields
-  =link_to_remove_association('labels.remove_choice'.t, f, 'data-no-turbolink' => true, :class => 'nested-remove remove-choice')
+  =link_to_remove_nested_association(:choices, f)
   =f.input(:name, :wrapper_html => {:id => 'name-field'})
