--- a/app/views/backend/sales/_addresses_form.html.haml
+++ b/app/views/backend/sales/_addresses_form.html.haml
@@ -1,4 +1,4 @@
-=simple_fields_for object do |f|
+=backend_fields_for object do |f|
   =f.referenced_association :address, :source => :mails
   =f.referenced_association :delivery_address, :source => :mails
   =f.referenced_association :invoice_address, :source => :mails
