fixes scaffold generator on show view

--- a/lib/generators/backend_scaffold/templates/show.html.haml
+++ b/lib/generators/backend_scaffold/templates/show.html.haml
@@ -3,5 +3,5 @@
 
 =beehive do |b|
   -b.cell do
-    =attribute_list do |l|
+    =attributes_list(@<%= singular_table_name %>) do |l|
       -l.attribute :name
